--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,26 +13,26 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-30 Thu 12:06]
+#+CAPTION: Clock summary at [2019-05-30 Thu 12:38]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *37:59* |       |       | 100.0 |
+| *Total time*                                           | *38:30* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 37:59   |       |       | 100.0 |
-| Active                                                 |         | 37:59 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  3:37 |   9.5 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |   9.9 |
-| Sprint and product backlog grooming                    |         |       |  2:07 |   5.6 |
-| Make wale templates meta-model elements                |         |       |  2:45 |   7.2 |
+| Stories                                                | 38:30   |       |       | 100.0 |
+| Active                                                 |         | 38:30 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  3:37 |   9.4 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |   9.8 |
+| Sprint and product backlog grooming                    |         |       |  2:07 |   5.5 |
+| Make wale templates meta-model elements                |         |       |  2:45 |   7.1 |
 | Flatten the data directory                             |         |       |  1:11 |   3.1 |
-| Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.7 |
-| Rename coding model                                    |         |       |  2:17 |   6.0 |
+| Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.6 |
+| Rename coding model                                    |         |       |  2:17 |   5.9 |
 | Windows build is failing on a number of tests          |         |       |  0:30 |   1.3 |
-| Consider a test suite level logging flag               |         |       |  1:40 |   4.4 |
+| Consider a test suite level logging flag               |         |       |  1:40 |   4.3 |
 | Move parent processing to injection                    |         |       |  2:06 |   5.5 |
-| Read variability papers                                |         |       |  0:56 |   2.5 |
-| Add code generation support to static configurations   |         |       | 14:54 |  39.2 |
+| Read variability papers                                |         |       |  0:56 |   2.4 |
+| Add code generation support to static configurations   |         |       | 15:25 |  40.0 |
 | Windows clang-cl release build is failing 4 tests      |         |       |  1:55 |   5.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -452,6 +452,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-30 Thu 12:07]--[2019-05-30 Thu 12:38] =>  0:31
     CLOCK: [2019-05-30 Thu 11:31]--[2019-05-30 Thu 12:06] =>  0:35
     CLOCK: [2019-05-29 Wed 17:36]--[2019-05-29 Wed 17:58] =>  0:22
     CLOCK: [2019-05-29 Wed 16:37]--[2019-05-29 Wed 17:25] =>  0:48
