--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,27 +13,27 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-30 Thu 20:59]
+#+CAPTION: Clock summary at [2019-05-30 Thu 21:30]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *43:59* |       |       | 100.0 |
+| *Total time*                                           | *44:29* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 43:59   |       |       | 100.0 |
-| Active                                                 |         | 43:59 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  3:37 |   8.2 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |   8.6 |
+| Stories                                                | 44:29   |       |       | 100.0 |
+| Active                                                 |         | 44:29 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  3:37 |   8.1 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |   8.5 |
 | Sprint and product backlog grooming                    |         |       |  2:07 |   4.8 |
-| Make wale templates meta-model elements                |         |       |  2:45 |   6.3 |
+| Make wale templates meta-model elements                |         |       |  2:45 |   6.2 |
 | Flatten the data directory                             |         |       |  1:11 |   2.7 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.6 |
-| Rename coding model                                    |         |       |  2:17 |   5.2 |
+| Rename coding model                                    |         |       |  2:17 |   5.1 |
 | Windows build is failing on a number of tests          |         |       |  0:30 |   1.1 |
-| Consider a test suite level logging flag               |         |       |  1:40 |   3.8 |
-| Move parent processing to injection                    |         |       |  2:06 |   4.8 |
+| Consider a test suite level logging flag               |         |       |  1:40 |   3.7 |
+| Move parent processing to injection                    |         |       |  2:06 |   4.7 |
 | Read variability papers                                |         |       |  0:56 |   2.1 |
-| Add code generation support to static configurations   |         |       | 20:54 |  47.5 |
-| Windows clang-cl release build is failing 4 tests      |         |       |  1:55 |   4.4 |
+| Add code generation support to static configurations   |         |       | 21:24 |  48.1 |
+| Windows clang-cl release build is failing 4 tests      |         |       |  1:55 |   4.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -452,6 +452,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-30 Thu 21:00]--[2019-05-30 Thu 21:30] =>  0:30
     CLOCK: [2019-05-30 Thu 19:40]--[2019-05-30 Thu 20:59] =>  1:19
     CLOCK: [2019-05-30 Thu 19:07]--[2019-05-30 Thu 19:39] =>  0:32
     CLOCK: [2019-05-30 Thu 16:51]--[2019-05-30 Thu 18:31] =>  1:40
