--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,15 +13,15 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-30 Thu 21:48]
+#+CAPTION: Clock summary at [2019-05-30 Thu 22:05]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *44:46* |       |       | 100.0 |
+| *Total time*                                           | *45:01* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 44:46   |       |       | 100.0 |
-| Active                                                 |         | 44:46 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  3:37 |   8.1 |
+| Stories                                                | 45:01   |       |       | 100.0 |
+| Active                                                 |         | 45:01 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  3:37 |   8.0 |
 | Create a video demo for the previous sprint's features |         |       |  3:46 |   8.4 |
 | Sprint and product backlog grooming                    |         |       |  2:07 |   4.7 |
 | Make wale templates meta-model elements                |         |       |  2:45 |   6.1 |
@@ -32,7 +32,7 @@
 | Consider a test suite level logging flag               |         |       |  1:40 |   3.7 |
 | Move parent processing to injection                    |         |       |  2:06 |   4.7 |
 | Read variability papers                                |         |       |  0:56 |   2.1 |
-| Add code generation support to static configurations   |         |       | 21:41 |  48.4 |
+| Add code generation support to static configurations   |         |       | 21:56 |  48.7 |
 | Windows clang-cl release build is failing 4 tests      |         |       |  1:55 |   4.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -452,6 +452,8 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-30 Thu 22:00]--[2019-05-30 Thu 22:05] =>  0:05
+    CLOCK: [2019-05-30 Thu 21:49]--[2019-05-30 Thu 21:59] =>  0:10
     CLOCK: [2019-05-30 Thu 21:31]--[2019-05-30 Thu 21:48] =>  0:17
     CLOCK: [2019-05-30 Thu 21:00]--[2019-05-30 Thu 21:30] =>  0:30
     CLOCK: [2019-05-30 Thu 19:40]--[2019-05-30 Thu 20:59] =>  1:19
