--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,26 +13,26 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-30 Thu 22:26]
+#+CAPTION: Clock summary at [2019-05-30 Thu 22:39]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *45:21* |       |       | 100.0 |
+| *Total time*                                           | *45:32* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 45:21   |       |       | 100.0 |
-| Active                                                 |         | 45:21 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  3:37 |   8.0 |
+| Stories                                                | 45:32   |       |       | 100.0 |
+| Active                                                 |         | 45:32 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  3:37 |   7.9 |
 | Create a video demo for the previous sprint's features |         |       |  3:46 |   8.3 |
-| Sprint and product backlog grooming                    |         |       |  2:07 |   4.7 |
-| Make wale templates meta-model elements                |         |       |  2:45 |   6.1 |
+| Sprint and product backlog grooming                    |         |       |  2:18 |   5.1 |
+| Make wale templates meta-model elements                |         |       |  2:45 |   6.0 |
 | Flatten the data directory                             |         |       |  1:11 |   2.6 |
-| Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.6 |
+| Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.5 |
 | Rename coding model                                    |         |       |  2:17 |   5.0 |
 | Windows build is failing on a number of tests          |         |       |  0:30 |   1.1 |
 | Consider a test suite level logging flag               |         |       |  1:40 |   3.7 |
 | Move parent processing to injection                    |         |       |  2:06 |   4.6 |
-| Read variability papers                                |         |       |  0:56 |   2.1 |
-| Add code generation support to static configurations   |         |       | 22:16 |  49.1 |
+| Read variability papers                                |         |       |  0:56 |   2.0 |
+| Add code generation support to static configurations   |         |       | 22:16 |  48.9 |
 | Windows clang-cl release build is failing 4 tests      |         |       |  1:55 |   4.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -204,6 +204,7 @@ Time spent creating the demo and presentation.
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-05-30 Thu 22:27]--[2019-05-30 Thu 22:38] =>  0:11
     CLOCK: [2019-05-29 Wed 10:11]--[2019-05-29 Wed 11:00] =>  0:49
     CLOCK: [2019-05-25 Sat 10:28]--[2019-05-25 Sat 10:38] =>  0:10
     CLOCK: [2019-05-24 Fri 08:45]--[2019-05-24 Fri 08:59] =>  0:24
@@ -565,6 +566,10 @@ Notes:
   types. We need to adapt the formatables code to populate the
   properties related to =requires_manual_default_constructor=. We then
   need to consult the assistant.
+- mapping elements transform has a single feature group, but the
+  fields are used separately. This is not too bad, we can keep this
+  approach. We just need to supply the feature model into the gatherer
+  and repeat the logic with the static configuration.
 
 Approach:
 
