--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,16 +13,16 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-31 Fri 11:34]
+#+CAPTION: Clock summary at [2019-05-31 Fri 11:43]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *47:22* |       |       | 100.0 |
+| *Total time*                                           | *47:30* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 47:22   |       |       | 100.0 |
-| Active                                                 |         | 47:22 |       | 100.0 |
+| Stories                                                | 47:30   |       |       | 100.0 |
+| Active                                                 |         | 47:30 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  3:37 |   7.6 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |   8.0 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |   7.9 |
 | Sprint and product backlog grooming                    |         |       |  3:02 |   6.4 |
 | Make wale templates meta-model elements                |         |       |  2:45 |   5.8 |
 | Flatten the data directory                             |         |       |  1:11 |   2.5 |
@@ -34,7 +34,7 @@
 | Windows clang-cl release build is failing 4 tests      |         |       |  2:16 |   4.8 |
 | Fix issues with nightly build and CI                   |         |       |  0:04 |   0.1 |
 | Read variability papers                                |         |       |  0:56 |   2.0 |
-| Add code generation support to static configurations   |         |       | 22:57 |  48.5 |
+| Add code generation support to static configurations   |         |       | 23:05 |  48.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -513,6 +513,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-31 Fri 11:35]--[2019-05-31 Fri 11:43] =>  0:08
     CLOCK: [2019-05-31 Fri 10:53]--[2019-05-31 Fri 11:34] =>  0:41
     CLOCK: [2019-05-30 Thu 22:06]--[2019-05-30 Thu 22:26] =>  0:20
     CLOCK: [2019-05-30 Thu 22:00]--[2019-05-30 Thu 22:05] =>  0:05
