--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,28 +13,28 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-31 Fri 13:22]
+#+CAPTION: Clock summary at [2019-05-31 Fri 14:08]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *48:00* |       |       | 100.0 |
+| *Total time*                                           | *48:45* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 48:00   |       |       | 100.0 |
-| Active                                                 |         | 48:00 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  3:37 |   7.5 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |   7.8 |
-| Sprint and product backlog grooming                    |         |       |  3:02 |   6.3 |
-| Make wale templates meta-model elements                |         |       |  2:45 |   5.7 |
-| Flatten the data directory                             |         |       |  1:11 |   2.5 |
+| Stories                                                | 48:45   |       |       | 100.0 |
+| Active                                                 |         | 48:45 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  3:37 |   7.4 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |   7.7 |
+| Sprint and product backlog grooming                    |         |       |  3:02 |   6.2 |
+| Make wale templates meta-model elements                |         |       |  2:45 |   5.6 |
+| Flatten the data directory                             |         |       |  1:11 |   2.4 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.5 |
-| Rename coding model                                    |         |       |  2:17 |   4.8 |
+| Rename coding model                                    |         |       |  2:17 |   4.7 |
 | Windows build is failing on a number of tests          |         |       |  0:30 |   1.0 |
-| Consider a test suite level logging flag               |         |       |  1:40 |   3.5 |
-| Move parent processing to injection                    |         |       |  2:06 |   4.4 |
-| Windows clang-cl release build is failing 4 tests      |         |       |  2:16 |   4.7 |
+| Consider a test suite level logging flag               |         |       |  1:40 |   3.4 |
+| Move parent processing to injection                    |         |       |  2:06 |   4.3 |
+| Windows clang-cl release build is failing 4 tests      |         |       |  2:16 |   4.6 |
 | Fix issues with nightly build and CI                   |         |       |  0:04 |   0.1 |
 | Read variability papers                                |         |       |  0:56 |   1.9 |
-| Add code generation support to static configurations   |         |       | 23:35 |  49.1 |
+| Add code generation support to static configurations   |         |       | 24:20 |  49.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -511,6 +511,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-31 Fri 13:23]--[2019-05-31 Fri 14:08] =>  0:45
     CLOCK: [2019-05-31 Fri 13:11]--[2019-05-31 Fri 13:22] =>  0:11
     CLOCK: [2019-05-31 Fri 11:44]--[2019-05-31 Fri 12:03] =>  0:19
     CLOCK: [2019-05-31 Fri 11:35]--[2019-05-31 Fri 11:43] =>  0:08
@@ -644,6 +645,7 @@ Approach:
 - update resolver to resolve static configurations.
 - generate the struct for the static configuration.
 - generate a method to read the struct from a dynamic configuration.
+
 
 *** Validate feature template names                                   :story:
 
